Closed Bug 1042631 Opened 11 years ago Closed 9 years ago

The pointer from Firefox window share shows misplaced

Categories

(Core :: WebRTC, defect, P4)

34 Branch
All
Linux
defect

Tracking

()

VERIFIED FIXED
mozilla50
Tracking Status
firefox48 --- wontfix
firefox49 --- verified
firefox-esr45 --- wontfix
firefox50 --- verified

People

(Reporter: bmaris, Assigned: jesup)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Latest Nightly 34.0a1 (buildID: 20140722030201) STR: 1. Open Firefox 2. Set media.getusermedia.screensharing.enabled to true 3. Open http://queze.net/goinfre/ff_gum_test.htm in a new tab 4. Click Window&Audio 5. Open Window or screen to share dropdown and select something that can be closed afterwards (eg: a folder) 6. Click Share Selected Items 7. Have both Firefox and the selected item to share (eg: a folder) in focus. 8. Move the mouse in the selected item (eg: a folder) Expected result: The pointer shows in the same place on both Firefox and selected item. Actual result: The pointer is misplaced in Firefox, a few pixels up. Notes: 1. This is Linux only.
Component: General → WebRTC
Product: Firefox → Core
Gcp, Matt -- can one of you guys take/own this bug?
Flags: needinfo?(linuxwolf)
Flags: needinfo?(gpascutto)
Assignee: nobody → gpascutto
Flags: needinfo?(linuxwolf)
Flags: needinfo?(gpascutto)
Whiteboard: [sceensharing-uplift]
Priority: -- → P1
Target Milestone: --- → mozilla34
I'd like to get this fixed in fx34, but I don't think we need to uplift this
Whiteboard: [sceensharing-uplift]
Blocks: Screensharing
No longer blocks: 1040061
Rank: 45
Priority: P1 → P4
Target Milestone: mozilla34 → ---
backlog: --- → webRTC+
Confirmed that this still reproduces (not necessarily up, but indeed not in the exact same place).
Hello, any good news about this? The company I work for (10000+ empl) is on FF 45.1 ESR and Ubuntu 16.04. This bug is impeding us to use WebRTC screen sharing on FF. :( I'm newbie developer. Is there anything I can do to solve this case? I've noted it happens only on window sharing and not on screen sharing.
Assignee: gpascutto → rjesup
Status: NEW → ASSIGNED
Comment on attachment 8772530 [details] [diff] [review] Fix Linux mouse position when sharing a window in WebRTC screensharing Review of attachment 8772530 [details] [diff] [review]: ----------------------------------------------------------------- +, with fix ::: media/webrtc/trunk/webrtc/modules/desktop_capture/mouse_cursor_monitor_x11.cc @@ +229,5 @@ > const DesktopCaptureOptions& options, > ScreenId screen) { > if (!options.x_display()) > return NULL; > + WindowId window = DefaultRootWindow(options.x_display()->display(); Missing closing )
Attachment #8772530 - Flags: review?(ngrunbaum) → review+
Pushed by rjesup@wgate.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/51c543f66795 Fix Linux mouse position when sharing a window in WebRTC screensharing r=ng
FYI, the mouse position capture was using the decoration window (with borders from the WM), not the inner window (whose coordinate system it used to apply the cursor). Note: ESR45 only gets critical crash/security fixes in general. This will be in 50, perhaps 49, and will eventually be in ESR 52. 50 goes to release in around 15ish weeks; 49 around 6 weeks less.
Pushed by rjesup@wgate.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/6765609dcb46 Bustage fix for typo when resolving nits rs=bustage
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla50
Randell -- Can you ask for uplift to Fx 49? Thanks.
Flags: needinfo?(rjesup)
Comment on attachment 8772530 [details] [diff] [review] Fix Linux mouse position when sharing a window in WebRTC screensharing Note: land this patch and the followup bustage-fix that landed to correct an oops when resolving nits before landing. Approval Request Comment [Feature/regressing bug #]: N/A [User impact if declined]: When screensharing a window in Linux, the pointer position is significantly off (too low, and maybe too right). For some uses this breaks the feature (you can't say "look here") [Describe test coverage new/current, TreeHerder]: Manual testing of position, basic sharing is tested. [Risks and why]: very low risk; just use a different windowid as the base for asking the mouse position. [String/UUID change made/needed]: none
Flags: needinfo?(rjesup)
Attachment #8772530 - Flags: approval-mozilla-aurora?
Comment on attachment 8772530 [details] [diff] [review] Fix Linux mouse position when sharing a window in WebRTC screensharing Review of attachment 8772530 [details] [diff] [review]: ----------------------------------------------------------------- This patch fixes a UI issue when screensharing a window in Linux. Take it in aurora. This also needs to be verified.
Attachment #8772530 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Flags: qe-verify+
Using Ubuntu 14.04 x64 I can see that the issue is fixed using Firefox 49 beta 8. Though using Ubuntu 16.04 x64 and x86 the pointer is invisible on both latest Nightly 51.0a1 and Firefox 49 beta 8. I did test this using https://mozilla.github.io/webrtc-landing/gum_test.html on two different machines. Any ideas here?
Flags: needinfo?(rjesup)
No - please file a separate bug on that (also, confirm if it worked on 16.04 in older releases/ever).
Flags: needinfo?(rjesup)
Logged bug 1299751 on that, mozregression pointed to this bug as a possible culprit. I will go ahead and close this bug as verified fixed since I did verify on 14.04 and 12.04 as well and continue the discussions for the issue from 16.04 to bug 1299751.
Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: