Bug 1042631 - Fix Linux mouse position when sharing a window in WebRTC screensharing. r=ng, a=gchang