media/webrtc/trunk/webrtc/modules/desktop_capture/mouse_cursor_monitor_x11.cc
@@ -61,7 +61,7 @@ namespace webrtc {
 class MouseCursorMonitorX11 : public MouseCursorMonitor,
                               public SharedXDisplay::XEventHandler {
  public:
-  MouseCursorMonitorX11(const DesktopCaptureOptions& options, Window window);
+  MouseCursorMonitorX11(const DesktopCaptureOptions& options, Window window, Window inner_window);
   virtual ~MouseCursorMonitorX11();
 
   void Init(Callback* callback, Mode mode) override;
@@ -80,6 +80,7 @@ class MouseCursorMonitorX11 : public MouseCursorMonitor,
   Callback* callback_;
   Mode mode_;
   Window window_;
+  Window inner_window_;
 
   bool have_xfixes_;
   int xfixes_event_base_;
@@ -88,13 +89,15 @@ class MouseCursorMonitorX11 : public MouseCursorMonitor,
   rtc::scoped_ptr<MouseCursor> cursor_shape_;
 };
 
+// For screens, we pass the same windowid for window and inner_window
 MouseCursorMonitorX11::MouseCursorMonitorX11(
     const DesktopCaptureOptions& options,
-    Window window)
+    Window window, Window inner_window)
     : x_display_(options.x_display()),
       callback_(NULL),
       mode_(SHAPE_AND_POSITION),
       window_(window),
+      inner_window_(inner_window),
       have_xfixes_(false),
       xfixes_event_base_(-1),
       xfixes_error_base_(-1) {}
@@ -150,7 +153,7 @@ void MouseCursorMonitorX11::Capture() {
     unsigned int mask;
 
     XErrorTrap error_trap(display());
-    Bool result = XQueryPointer(display(), window_, &root_window, &child_window,
+    Bool result = XQueryPointer(display(), inner_window_, &root_window, &child_window,
                                 &root_x, &root_y, &win_x, &win_y, &mask);
     CursorState state;
     if (!result || error_trap.GetLastErrorAndDisable() != 0) {
@@ -216,10 +219,10 @@ MouseCursorMonitor* MouseCursorMonitor::CreateForWindow(
     const DesktopCaptureOptions& options, WindowId window) {
   if (!options.x_display())
     return NULL;
-  window = GetTopLevelWindow(options.x_display()->display(), window);
-  if (window == None)
+  WindowId outer_window = GetTopLevelWindow(options.x_display()->display(), window);
+  if (outer_window == None)
     return NULL;
-  return new MouseCursorMonitorX11(options, window);
+  return new MouseCursorMonitorX11(options, outer_window, window);
 }
 
 MouseCursorMonitor* MouseCursorMonitor::CreateForScreen(
@@ -227,8 +230,8 @@ MouseCursorMonitor* MouseCursorMonitor::CreateForScreen(
     ScreenId screen) {
   if (!options.x_display())
     return NULL;
-  return new MouseCursorMonitorX11(
-      options, DefaultRootWindow(options.x_display()->display()));
+  WindowId window = DefaultRootWindow(options.x_display()->display());
+  return new MouseCursorMonitorX11(options, window, window);
 }
 
 }  // namespace webrtc
